//generate protobuf:
// protoc --go_out=./generated --go_opt=paths=source_relative \
// --go-grpc_out=./generated --go-grpc_opt=paths=source_relative \
// grpcmain.proto

syntax = "proto3";

package grpcmain;

option go_package = "./generated";

message HelloMessage{
    string title = 1;
    string body = 2;
}


service GreetingService{
    rpc SayHello(HelloMessage) returns (HelloMessage){}
}